--- a/introductionpage.html
+++ b/introductionpage.html
@@ -4,12 +4,22 @@
         <title>Le Quiz</title> <!--title of that appears on the tab-->
         <link rel = "icon" type = "image/x-icon" href = "images/egg.jpg"> <!--image icon on the tab-->
 
-        <meta charset = "utf-8">
-        <meta name = "viewport" content = "width=device-width">
-
-        <link href = "style.css" rel = "stylesheet" type = "text/css" />
-
     </head>
+
+    <body>
+        <div class = "LogoImage"> <!--the container for our image and header-->
+            <img height = "200px" width = "200px" class = "logopicture" src = "images/egg.jpg"> <!--makes the image-->
+            <h2 class = "name" >Le Quiz</h2> <!--the header -->
+
+            <p class = "description" >This is Le Flashcard program </p>
+        </div>
+
+        <a class = "button" href = "file:///Users/jacobwang/Desktop/L-Quiz/login.html" target = "_blank">
+            <img class = "button_icon" src = "images/jetski.png">
+            <span class = "button_text" >Login</span>
+        </a>
+
+    </body>
 
 
 </html> 
