--- a/login.html
+++ b/login.html
@@ -18,8 +18,9 @@
         <div class = "login-title">
 
             <h1>
-                Login
+                Login With Google
             </h1>
+            <img class = "Google-icon" width = 90px height = 90px href = "images/google icon.png">
             
         </div>
 
@@ -28,6 +29,7 @@
             <h2>
                 Username or Email
             </h2>
+            <input type = "text" placeholder = "Enter Username or Email" name = "username" required>
 
         </div>
 
@@ -36,6 +38,7 @@
             <h2>
                 Password
             </h2>
+            <input type = "text" placeholder = "Enter Password" name = "password" required>
 
         </div>
 
