--- a/login.html
+++ b/login.html
@@ -37,8 +37,12 @@
             <input type = "text" placeholder = "Enter Password" id = "password" required>
 
         </div>
+        
+        <div class = "button">
+            <button type = "button" onclick="getInfo()">Login</button>
+        </div>
 
-
+        <script src = "js/main.js"></script>
     </body>
 
 </html>
