--- a/intro/intro-page.html
+++ b/intro/intro-page.html
@@ -19,6 +19,18 @@
             <span class = "button_text" >Login</span>
         </a>
 
+        <a class = "button" href = "file:///Users/jacobwang/Desktop/L-Quiz/login.html" target = "_blank">
+            <img class = "button_icon" src = "images/goddid.png">
+            <span class = "button_text" >Sign Up</span>
+        </a>
+
+        <a class = "button" href = "file:///Users/jacobwang/Desktop/L-Quiz/login.html" target = "_blank">
+            <img class = "button_icon" src = "images/ocean.png">
+            <span class = "button_text" >Guest</span>
+        </a>
+
+        <script src = "intro-page.js"></script>
+
     </body>
 
 
