--- a/intro-page.html
+++ b/intro-page.html
@@ -4,6 +4,7 @@
         <title>Le Quiz</title> <!--title of that appears on the tab-->
         <link rel = "icon" type = "image/x-icon" href = "images/egg.jpg"> <!--image icon on the tab-->
 
+        <link href="intro-style.css" rel="stylesheet" type="text/css" />
     </head>
 
     <body>
