--- a/intro-page.html
+++ b/intro-page.html
@@ -12,21 +12,20 @@
             <img height = "200px" width = "200px" class = "logopicture" src = "images/egg.jpg"> <!--makes the image-->
             <h2 class = "name" >Le Quiz</h2> <!--the header -->
 
-            <p class = "description" >This is Le Flashcard program </p>
         </div>
 
         <a class = "button" href = "file:///Users/jacobwang/Desktop/L-Quiz/login.html" target = "_blank">
-            <img class = "button_icon" src = "images/jetski.png">
+            <img class = "button_icon" src = "images/login.png">
             <span class = "button_text" >Login</span>
         </a>
 
         <a class = "button" href = "file:///Users/jacobwang/Desktop/L-Quiz/login.html" target = "_blank">
-            <img class = "button_icon" src = "images/goddid.png">
+            <img class = "button_icon" src = "images/signup.png">
             <span class = "button_text" >Sign Up</span>
         </a>
 
         <a class = "button" href = "file:///Users/jacobwang/Desktop/L-Quiz/login.html" target = "_blank">
-            <img class = "button_icon" src = "images/ocean.png">
+            <img class = "button_icon" src = "images/guest.png">
             <span class = "button_text" >Guest</span>
         </a>
 
