fixed relative paths and made login do something

--- a/intro-page.html
+++ b/intro-page.html
@@ -14,17 +14,17 @@
 
         </div>
 
-        <a class = "button" href = "file:///Users/jacobwang/Desktop/L-Quiz/login.html" target = "_blank">
+        <a class = "button" href = "login.html" target = "_blank">
             <img class = "button_icon" src = "images/login.png">
             <span class = "button_text" >Login</span>
         </a>
 
-        <a class = "button" href = "file:///Users/jacobwang/Desktop/L-Quiz/login.html" target = "_blank">
+        <a class = "button" href = "login.html" target = "_blank">
             <img class = "button_icon" src = "images/signup.png">
             <span class = "button_text" >Sign Up</span>
         </a>
 
-        <a class = "button" href = "file:///Users/jacobwang/Desktop/L-Quiz/login.html" target = "_blank">
+        <a class = "button" href = "login.html" target = "_blank">
             <img class = "button_icon" src = "images/guest.png">
             <span class = "button_text" >Guest</span>
         </a>
