fixed guest button

--- a/intro-page.html
+++ b/intro-page.html
@@ -24,7 +24,7 @@
             <span class = "button_text" >Sign Up</span>
         </a>
 
-        <a class = "button" href = "login.html" target = "_blank">
+        <a class = "button" href = "quiz.html" target = "_blank">
             <img class = "button_icon" src = "images/guest.png">
             <span class = "button_text" >Guest</span>
         </a>
