--- a/intro-page.html
+++ b/intro-page.html
@@ -9,7 +9,7 @@
 
     <body>
         <div class = "LogoImage"> <!--the container for our image and header-->
-            <img height = "200px" width = "200px" class = "logopicture" src = "images/egg.jpg"> <!--makes the image-->
+            <img height = "200px" width = "400px" class = "logopicture" src = "images/lequiz.png"> <!--makes the image-->
             <h2 class = "name" >Le Quiz</h2> <!--the header -->
 
         </div>
@@ -24,9 +24,9 @@
             <span class = "button_text" >Sign Up</span>
         </a>
 
-        <a class = "button" href = "file:///Users/jacobwang/Desktop/L-Quiz/login.html" target = "_blank">
+        <a class = "button" href = "file:///Users/jacobwang/Desktop/L-Quiz/quiz.html" target = "_blank">
             <img class = "button_icon" src = "images/guest.png">
-            <span class = "button_text" >Guest</span>
+            <span class = "button_text" >Continue Without Login</span>
         </a>
 
         <script src = "intro-page.js"></script>
