--- a/intro-page.html
+++ b/intro-page.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Le Quiz</title> <!--title of that appears on the tab-->
-        <link rel = "icon" type = "image/x-icon" href = "images/egg.jpg"> <!--image icon on the tab-->
+        <link rel = "icon" type = "image/x-icon" href = "images/lequiz.png"> <!--image icon on the tab-->
 
         <link href="intro-style.css" rel="stylesheet" type="text/css" />
     </head>
@@ -16,16 +16,19 @@
 
         <a class = "button" href = "login.html" target = "_blank">
             <img class = "button_icon" src = "images/login.png">
+            <br>
             <span class = "button_text" >Login</span>
         </a>
 
         <a class = "button" href = "login.html" target = "_blank">
             <img class = "button_icon" src = "images/signup.png">
+            <br>
             <span class = "button_text" >Sign Up</span>
         </a>
 
         <a class = "button" href = "file:///Users/jacobwang/Desktop/L-Quiz/login.html" target = "_blank">
             <img class = "button_icon" src = "images/guest.png">
+            <br>
             <span class = "button_text" >Continue Without Login</span>
         </a>
 
