--- a/intro-page.html
+++ b/intro-page.html
@@ -26,7 +26,7 @@
             <span class = "button_text" >Sign Up</span>
         </a>
 
-        <a class = "button" href = "file:///Users/jacobwang/Desktop/L-Quiz/login.html" target = "_blank">
+        <a class = "button" href = "quiz.html" target = "_blank">
             <img class = "button_icon" src = "images/guest.png">
             <br>
             <span class = "button_text" >Continue Without Login</span>
