--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
 
             <br>
             <h1>
-                Login
+                Login To Your Account
             </h1>
         </div>
 
@@ -51,7 +51,7 @@
 
             <p class = "forgotpassword"> <a href = "#">Forgot password?</a></p>
 
-            <button type = "button" onclick = "getInfo()">login</button>
+            <button class = "button" type = "button" onclick = "getInfo()">Login</button>
 
             <br><br>
         </div>
@@ -63,6 +63,8 @@
 
         <script src = "js/main.js"></script>
         </form>
+
+        <!-- <div class = "bubble" style = "top: 200px; left: 50px;"></div> -->
 
     </body>
 
