sign up page and intro page

--- a/intro-page.html
+++ b/intro-page.html
@@ -20,7 +20,7 @@
             <span class = "button_text" >Login</span>
         </a>
 
-        <a class = "button" href = "login.html">
+        <a class = "button" href = "signup.html">
             <img class = "button_icon" src = "images/signup.png">
             <br>
             <span class = "button_text" >Sign Up</span>
