--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
             <input type="text" name="username" id="username" placeholder="UserName" />
             <input type="email" name="email" placeholder="Email" id="email" />
             <input type="password" name="password" placeholder="Password" id="password" />
-            <button>Sign Up</button>
+            <button class = "button" type = "button" onclick = "addInfo()">SignUp</button>
             </form>
           </div>
           <div class="card_terms">
