--- a/quizzing.html
+++ b/quizzing.html
@@ -10,6 +10,7 @@
     <div class="nav">
       <h1> LeQuizzer </h1>
       <div> 
+        <button onclick="deleteCards()"> Start Quiz </button>
         <button onclick="createNewCard()"> Refresh Quiz </button>
       </div>
     </div>
@@ -17,14 +18,14 @@
   </header>
   
   <div class="container"> 
-    <div class="create_box">
-    <h2 style="text-align: center; color: black;"> Create FlashCard </h2>
-    <label for="question"> Enter Question </label>
+    <div class="create_quiz">
+    <h2 style="text-align: center; color: black;"> Test Yourself! </h2>
+    <label for="question"> Question: </label>
     <textarea id="question"> </textarea>
 
     <br></br>
 
-    <label for="answer"> Enter Answer </label>
+    <label for="answer"  > Enter Answer </label>
     <textarea id="answer"></textarea>
     <div>
       <button onclick="addFlashCard()"> Save </button>
