--- a/quizzing.html
+++ b/quizzing.html
@@ -8,10 +8,10 @@
 <header>
     <div class="container">
     <div class="nav">
-      <h1> LeQuizzer </h1>
+      <h1> LeQuizzler </h1>
       <div> 
-        <button onclick="deleteCards()"> Start Quiz </button>
-        <button onclick="createNewCard()"> Refresh Quiz </button>
+        <button onclick="startQuiz()"> Start Quiz </button>
+        <button onclick="refreshQuiz()"> Refresh Quiz </button>
       </div>
     </div>
     </div>
@@ -28,8 +28,8 @@
     <label for="answer"  > Enter Answer </label>
     <textarea id="answer"></textarea>
     <div>
-      <button onclick="addFlashCard()"> Save </button>
-      <button onclick="hideCreateBox()"> Close </button>
+      <button onclick="nextQuestion()"> Next Question </button>
+      <button onclick="submitAnswer()"> Submit Answer </button>
     </div>
    </div> 
    <div class="flashcards"></div>
