--- a/login.html
+++ b/login.html
@@ -15,7 +15,14 @@
 
     <body>
 
-        <br><br><br>
+        <div class = "home_button">
+        <a href = "intro-page.html">
+          <img height = "50px" width = "50 px" class = "homepicture" src = "images/lequiz.png">
+        </a>
+
+      </div>
+
+        <br><br><br><br><br><br><br><br><br>
         <form action = "">
         <div class = "login-title">
 
