--- a/signup.html
+++ b/signup.html
@@ -16,9 +16,9 @@
           </div>
           <div class="form">
           <form action="/register" method="post">
-            <input type="text" name="username" id="username" placeholder="UserName" />
-            <input type="password" name="password" placeholder="Password" id="password" />
-            <button class = "button" type = "button" onclick = "addInfo()">SignUp</button>
+            <input type="text" name="username" id="signupUsername" placeholder="UserName" />
+            <input type="password" name="password" placeholder="Password" id="signupPassword" />
+            <button class = "button" type = "button" onclick = "signup()">SignUp</button>
             </form>
             <script src = "js/main.js"></script>
           </div>
@@ -28,5 +28,6 @@
         </div>
       </div>
 
+      <script src = "js/main.js"></script>
     </body>
 </html>
