--- a/signup.html
+++ b/signup.html
@@ -3,6 +3,7 @@
 <head>
 
     <title> SignUp Form</title>
+    <link rel = "icon" type = "image/x-icon" href = "images/lequiz.png">
     <link href="signup-style.css" rel="stylesheet" type="text/css" />
 
 </head>
