--- a/intro-page.html
+++ b/intro-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Le Quiz</title> <!--title of that appears on the tab-->
+        <title>Le Quiz</title> 
         <link rel = "icon" type = "image/x-icon" href = "images/lequiz.png"> <!--image icon on the tab-->
 
         <link href="intro-style.css" rel="stylesheet" type="text/css" />
