--- a/login.html
+++ b/login.html
@@ -3,10 +3,10 @@
 
     <head>
         <title>
-            Login <!-- tab title -->
+            Login 
         </title>
 
-        <link rel = "icon" type = "image/x-icon" href = "images/egg.jpg"> <!-- tab icon CHANGE THIS LATER-->
+        <link rel = "icon" type = "image/x-icon" href = "images/lequiz.png"> <!-- tab icon CHANGE THIS LATER-->
 
         <link href = "login-style.css" rel = "stylesheet" type = "text/css">
 
