--- a/quizzing.html
+++ b/quizzing.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title> LeQuiz Flashcard Maker  </title>
+  <link rel = "icon" type = "image/x-icon" href = "images/lequiz.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
