--- a/quiz.html
+++ b/quiz.html
@@ -8,6 +8,12 @@
 
 <header>
     <div class="container">
+      <div class = "home_button">
+        <a href = "intro-page.html">
+          <img height = "25px" width = "25 px" class = "homepicture" src = "images/lequiz.png">
+        </a>
+
+      </div>
     <div class="nav">
       <h1> LeQuiz </h1>
       <div> 
