--- a/quiz.html
+++ b/quiz.html
@@ -8,7 +8,7 @@
 <header>
     <div class="container">
     <div class="nav">
-      <h1> LeQuiz </h1>
+      <h1> Testacle </h1>
       <div> 
         <button onclick="createNewCard()"> New Card </button>
         <button onclick="deleteCards()"> Delete Cards </button>
