--- a/intro-page.html
+++ b/intro-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Le Quiz</title> <!--title of that appears on the tab-->
+        <title>Testacle</title> <!--title of that appears on the tab-->
         <link rel = "icon" type = "image/x-icon" href = "images/lequiz.png"> <!--image icon on the tab-->
 
         <link href="intro-style.css" rel="stylesheet" type="text/css" />
@@ -10,7 +10,7 @@
     <body>
         <div class = "LogoImage"> <!--the container for our image and header-->
             <img height = "200px" width = "400px" class = "logopicture" src = "images/lequiz.png"> <!--makes the image-->
-            <h2 class = "name" >Le Quiz</h2> <!--the header -->
+            <h2 class = "name" >Testacle</h2> <!--the header -->
 
         </div>
 
