--- a/signup.html
+++ b/signup.html
@@ -6,9 +6,13 @@
     <link rel = "icon" type = "image/x-icon" href = "images/lequiz.png">
     <link href="signup-style.css" rel="stylesheet" type="text/css" />
 
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+
 </head>
 
 <body>
+
     <div class="container">
       <div class = "home_button">
         <a href = "intro-page.html">
